--- a/app/src/main/res/layout/start.xml
+++ b/app/src/main/res/layout/start.xml
@@ -18,9 +18,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="sans-serif-condensed"
-        android:text="Расположите элементы так, как в презентации, и потом добавьте анимацию: при выборе размера должен меняться размер пиццы на тарелке, а при тапе на пиццу появляться ее описание"
+        android:text="Расположите элементы как в презентации, и потом добавьте анимацию: при выборе размера должен меняться размер пиццы на тарелке, а при тапе на пиццу появляться ее описание"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
